<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.scenariomesh</groupId>
  <artifactId>scenariomesh-parent</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>ScenarioMesh</name>
  <modules>
    <module>scenariomesh-core</module><module>scenariomesh-config</module><module>scenariomesh-protocol</module><module>scenariomesh-scheduler</module>
    <module>scenariomesh-adapter-junit-platform</module><module>scenariomesh-adapter-cucumber-junit4</module><module>scenariomesh-adapter-testng</module>
    <module>scenariomesh-worker-runtime</module><module>scenariomesh-coordinator</module><module>scenariomesh-reporting</module>
    <module>scenariomesh-maven-plugin</module><module>scenariomesh-maven-extension</module><module>scenariomesh-cli</module>
  </modules>
  <properties>
    <maven.compiler.release>17</maven.compiler.release><project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jackson.version>2.17.3</jackson.version><snakeyaml.version>2.3</snakeyaml.version><junit.jupiter.version>5.10.5</junit.jupiter.version><junit.platform.version>1.10.5</junit.platform.version>
    <junit4.version>4.13.2</junit4.version><testng.version>7.10.2</testng.version><slf4j.version>2.0.16</slf4j.version>
    <maven.version>3.9.9</maven.version><maven.plugin.annotations.version>3.13.1</maven.plugin.annotations.version>
  </properties>
  <dependencyManagement><dependencies>
    <dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-databind</artifactId><version>${jackson.version}</version></dependency>
    <dependency><groupId>com.fasterxml.jackson.datatype</groupId><artifactId>jackson-datatype-jsr310</artifactId><version>${jackson.version}</version></dependency>
    <dependency><groupId>org.yaml</groupId><artifactId>snakeyaml</artifactId><version>${snakeyaml.version}</version></dependency>
    <dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId><version>${slf4j.version}</version></dependency>
    <dependency><groupId>org.junit.jupiter</groupId><artifactId>junit-jupiter</artifactId><version>${junit.jupiter.version}</version><scope>test</scope></dependency>
  </dependencies></dependencyManagement>
  <build><pluginManagement><plugins>
    <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><version>3.13.0</version></plugin>
    <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId><version>3.5.2</version></plugin>
    <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-plugin-plugin</artifactId><version>3.13.1</version></plugin>
  </plugins></pluginManagement><plugins>
    <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId></plugin>
    <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId><configuration><useModulePath>false</useModulePath></configuration></plugin>
  </plugins></build>
</project>
